# token-streaming-proxy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_core.py
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
social/: linkedin-post.md  x-post.md
src/token_streaming_proxy/: __init__.py  backpressure.py  cli.py  core.py  exceptions.py  models.py  sse.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_core_proxy.py  test_exceptions.py  test_models.py  test_sse.py  test_utils.py
