[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-streaming-proxy"
version = "0.1.0"
description = "High-performance streaming proxy for LLM APIs with SSE backpressure handling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rajath John", email = "jrajath94@gmail.com"},
]
keywords = [
    "llm",
    "streaming",
    "proxy",
    "sse",
    "server-sent-events",
    "backpressure",
    "asyncio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "httpx>=0.25",
    "uvicorn>=0.24",
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "httpx[http2]>=0.25",
]

[project.scripts]
token-proxy = "token_streaming_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/jrajath94/token-streaming-proxy"
Repository = "https://github.com/jrajath94/token-streaming-proxy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
